# Kinematica_bp

./: .gitignore  Doxyfile.in  Makefile.am  Makefile.in  configure  configure.ac  readme.md  sensor_configurations.txt
linux/: .gitignore
src/: Compass.cpp  Compass.hpp  FileReader.cpp  FileReader.hpp  KalmanFilter.cpp  KalmanFilter.hpp  Lidar.cpp  Lidar.hpp  MainFrameWindow.cpp  MainFrameWindow.hpp  MainSettings.cpp  MainSettings.hpp  Makefile.am  Makefile.in  MathUtils.cpp  MathUtils.hpp  Odometry.cpp  Odometry.hpp  Particle.cpp  Particle.hpp  ParticleFilter.cpp  ParticleFilter.hpp  Robot.cpp  Robot.hpp  RobotShape.cpp  RobotWorld.cpp  RobotWorld.hpp  RobotWorldCanvas.cpp  RobotWorldCanvas.hpp  config.h.in
